<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@drawable/caa_top_a"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_edit"
        android:textSize="20dp"
        android:textColor="@color/shallowGray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/nickname_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/nickname_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:hint="@string/nickname"
        android:background="@drawable/edittext_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:maxLength="10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_kome"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/nickname_edit"
        app:layout_constraintRight_toRightOf="@id/nickname_edit"
        android:gravity="center"/>
    <TextView
        android:id="@+id/nickname_next_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/nickname_next"
        app:layout_constraintTop_toBottomOf="@id/nickname_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/nickname_next_img"
        android:layout_width="50dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/nickname_next_text"
        app:layout_constraintBottom_toBottomOf="@id/nickname_next_text"
        app:layout_constraintLeft_toRightOf="@id/nickname_next_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>