<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/caa_GorL_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@drawable/caa_top_a"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/gol_img"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/aim_b"/>
    <TextView
        android:id="@+id/gol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GorL"
        android:textSize="14dp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/gol_img"
        app:layout_constraintBottom_toTopOf="@id/gol_google"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.5"/>
    <ImageView
        android:id="@+id/gol_google"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@id/gol_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/caa_gorl_google_back"/>
    <ImageView
        android:id="@+id/gol_line"
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/gol_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/caa_gorl_line_back"/>
    <TextView
        android:id="@+id/gol_google_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/gol_google"
        app:layout_constraintBottom_toBottomOf="@id/gol_google"
        app:layout_constraintLeft_toLeftOf="@id/gol_google"
        app:layout_constraintRight_toRightOf="@id/gol_google"
        android:gravity="center"/>

    <TextView
        android:id="@+id/nickname_next_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/line"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="@id/gol_line"
        app:layout_constraintBottom_toBottomOf="@id/gol_line"
        app:layout_constraintLeft_toLeftOf="@id/gol_line"
        app:layout_constraintRight_toRightOf="@id/gol_line"
        android:gravity="center"/>
    <TextView
        android:id="@+id/caa_GroL_backSi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="戻る"
        android:textColor="@color/shallowGray"
        app:layout_constraintTop_toBottomOf="@id/gol_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!--ロード中の黒画面-->
    <ImageView
        android:id="@+id/caa_GorL_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--プログレスダイアログ-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>