<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sia_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_sia_list"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintHorizontal_bias="0."
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/logo_login"
        app:layout_constraintVertical_bias="0.18"/>
    <ImageView
        android:id="@+id/google_login_"
        android:layout_width="300dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/logo_login"
        app:layout_constraintBottom_toTopOf="@id/line_login_"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/login_button_back_google"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/google_login_"
        app:layout_constraintBottom_toBottomOf="@id/google_login_"
        app:layout_constraintRight_toLeftOf="@id/google_login_text"
        app:layout_constraintLeft_toLeftOf="@id/google_login_"
        app:layout_constraintHorizontal_bias="0.8"
        app:srcCompat="@drawable/google_logo"/>
    <TextView
        android:id="@+id/google_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:textSize="15dp"
        android:textColor="@color/shallowGray"
        app:layout_constraintTop_toTopOf="@id/google_login_"
        app:layout_constraintBottom_toBottomOf="@id/google_login_"
        app:layout_constraintRight_toRightOf="@id/line_login_"
        app:layout_constraintLeft_toLeftOf="@id/line_login_"
        app:layout_constraintHorizontal_bias="0.65"/>
    <ImageView
        android:id="@+id/line_login_"
        android:layout_width="300dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/google_login_"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/login_button_back"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@id/line_login_"
        app:layout_constraintBottom_toBottomOf="@id/line_login_"
        app:layout_constraintRight_toLeftOf="@id/line_login_text"
        app:layout_constraintLeft_toLeftOf="@id/line_login_"
        app:layout_constraintHorizontal_bias="0.77"
        app:srcCompat="@drawable/line_logo_svg"/>
    <TextView
        android:id="@+id/line_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_line"
        android:textSize="15dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/line_login_"
        app:layout_constraintBottom_toBottomOf="@id/line_login_"
        app:layout_constraintRight_toRightOf="@id/line_login_"
        app:layout_constraintLeft_toLeftOf="@id/line_login_"
        app:layout_constraintHorizontal_bias="0.63"/>

    <!--
    <com.google.android.gms.common.SignInButton
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:id="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/logo_login"
        app:layout_constraintBottom_toTopOf="@id/line_login_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"/>
   <com.linecorp.linesdk.widget.LoginButton
        android:id="@+id/line_login_btn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"/>
        -->
    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:textSize="12dp"
        app:layout_constraintTop_toBottomOf="@id/line_login_"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="70dp"/>

    <!--ロード中の黒画面-->
    <ImageView
        android:id="@+id/asi_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!--プログレスダイアログ-->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_in"
        android:indeterminateTint="@color/teal_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>